# High-reso-ADC-qt

./: .gitignore  ADS1256.h  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  worker.cpp  worker.h
